v0.4.5.1 Customized scrollbar bugs fixed

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body::-webkit-scrollbar{
 
 body::-webkit-scrollbar-thumb{
   background-color: var(--secondary-second-color);
-  border-radius: 4px;
+  border-radius: 0.5rem;
 }
 
 .span__title-marked{
